--- a/.gitignore
+++ b/.gitignore
@@ -107,8 +107,23 @@ node_modules/
 *.sql
 *.sqlite
 
+
+# Created by https://www.gitignore.io/api/composer
+# Edit at https://www.gitignore.io/?templates=composer
+
+### Composer ###
+composer.phar
+/src/reativ-wp-starter-kit/vendor/
+
+# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+composer.lock
+
+# End of https://www.gitignore.io/api/composer
+
 # End of https://www.gitignore.io/api/linux,macos,windows,wordpress,visualstudiocode
 
 src/wp-core
 
 yarn.lock
+/vendor/
